set task via ARG or ENV

--- a/claymore-cuda-miner/Dockerfile
+++ b/claymore-cuda-miner/Dockerfile
@@ -4,6 +4,7 @@ CMD nvidia-smi
 ARG WALLET="0xAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" 
 ARG INTENSITY=8
 ARG PORT=3333
+ARG TASK=""
 
 RUN apt-get update && apt-get install --no-install-recommends --no-install-suggests -y libpci-dev
 
@@ -14,10 +15,12 @@ COPY app/ .
 ENV WALLET=${WALLET}
 ENV INTENSITY=${INTENSITY}
 ENV PORT=${PORT}
+ENV TASK=${TASK}
 
 EXPOSE ${PORT}/tcp
 
 ENTRYPOINT ["./start.sh"]
-CMD [""]
+CMD ["${TASK}"]
+
 
 
